.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: (/|$)(.*)
        backend:
          service:
            name: kube2py-green-service
            port:
              number: 80
      - pathType: Prefix
        path: /api(/|$)(.*)
        backend:
          service:
            name: kube2py-blue-service
            port:
              number: 80
